--- a/api/package.json
+++ b/api/package.json
@@ -1,33 +1,47 @@
 {
-  "name": "xcafe-token-deploy-api",
-  "version": "1.0.0",
-  "description": "API para deploy de tokens ERC-20 na BSC para o projeto xcafe",
+  "name": "xcafe-token-api-hybrid",
+  "version": "3.0.0",
+  "description": "API híbrida para compilação de contratos - usuário paga deploy via MetaMask",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "deploy": "node deploy.js"
   },
-  "keywords": [
-    "token",
-    "erc20",
-    "bsc",
-    "ethereum",
-    "deploy",
-    "xcafe"
-  ],
-  "author": "xcafe",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "ethers": "^5.7.2",
-    "dotenv": "^16.3.1"
+    "express-rate-limit": "^6.7.0",
+    "solc": "^0.8.19",
+    "ethers": "^6.10.0",
+    "helmet": "^6.1.5",
+    "dotenv": "^16.0.3",
+    "compression": "^1.7.4",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^2.0.22",
+    "jest": "^29.5.0",
+    "@types/node": "^18.16.3"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
+  },
+  "keywords": [
+    "blockchain",
+    "ethereum",
+    "solidity",
+    "smart-contracts",
+    "token",
+    "deploy",
+    "compile",
+    "web3"
+  ],
+  "author": "xcafe Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xcafe/token-api-extended"
   }
 }
