feat: atualizar versão do compilador Solidity para 0.8.30 e adicionar guia de verificação de contrato

--- a/api/.env.template
+++ b/api/.env.template
@@ -12,8 +12,8 @@ BSC_TESTNET_RPC=https://data-seed-prebsc-1-s1.binance.org:8545/
 ETHEREUM_RPC=https://eth.llamarpc.com
 POLYGON_RPC=https://polygon.llamarpc.com
 
-# ===== COMPILADOR SOLIDITY =====
-SOLC_VERSION=0.8.26
+# ===== SOLIDITY COMPILER =====
+SOLC_VERSION=0.8.30
 OPTIMIZATION_ENABLED=true
 OPTIMIZATION_RUNS=200
 COMPILE_TIMEOUT=120000
